# pong

common_modules/: Cargo.toml
common_modules/src/: camera_plugin.rs  debug_text_plugin.rs  lib.rs
pong/: Cargo.toml
pong/src/: main.rs
src/: main.rs
