[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["mp3"] }
dialoguer = "0.11.0"
tokio = "1.37.0"
bevy_prototype_lyon = "0.11.0"
common_modules = { path = "../common_modules" }
rand = "0.8.5"
libm = "0.2.8"
